--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/jubbaIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>J-tech</title>
+    <title>Jubba ICT solutions</title>
   </head>
   <body className="dark">
     <div id="root"></div>
